--- a/login.html
+++ b/login.html
@@ -185,7 +185,7 @@
 
   <script src="main.js"></script>
   <script>
-    const WORKER_URL = 'https://mnmfitness02.mnmfitness02.workers.dev';
+    const WORKER_URL = 'https://mnmxfitness.ca';
 
     const params = new URLSearchParams(window.location.search);
     if (params.get('error') === 'expired') {
