--- a/login.html
+++ b/login.html
@@ -33,6 +33,7 @@
       width: 72px;
       height: 72px;
       object-fit: contain;
+      border-radius: 50%;
     }
     .login-card h1 {
       font-family: var(--font-display);
