--- a/login.html
+++ b/login.html
@@ -32,8 +32,10 @@
     .login-logo img {
       width: 72px;
       height: 72px;
-      object-fit: contain;
+      object-fit: cover;
       border-radius: 50%;
+      border: 2px solid var(--red);
+      overflow: hidden;
     }
     .login-card h1 {
       font-family: var(--font-display);
