--- a/programs.html
+++ b/programs.html
@@ -28,7 +28,7 @@
     .badge.red { background: rgba(249,30,15,0.1); border-color: var(--red); color: var(--red); }
     .coaching-img { width: 100%; height: 460px; object-fit: cover; filter: grayscale(20%); display: block; }
     .phases-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 2px; background: var(--grey-line); }
-    .phase-card { background: var(--black-card); padding: 3rem; position: relative; overflow: hidden; transition: background var(--transition); }
+    .phase-card { background: var(--black-card); padding: 3rem; position: relative; overflow: hidden; transition: background var(--transition); display: flex; flex-direction: column; }
     .phase-card:hover { background: var(--black-card2); }
     .phase-top { display: flex; align-items: flex-start; justify-content: space-between; margin-bottom: 2rem; gap: 1rem; }
     .phase-badge { font-family: var(--font-condensed); font-size: 0.7rem; font-weight: 700; letter-spacing: 0.2em; text-transform: uppercase; padding: 6px 14px; border: 1px solid var(--red); color: var(--red); white-space: nowrap; }
@@ -40,7 +40,7 @@
     .phase-price-option .amount { font-family: var(--font-display); font-size: 1.8rem; color: var(--white); line-height: 1; }
     .phase-price-option.highlight { border-color: var(--red); background: rgba(249,30,15,0.06); }
     .phase-price-option.highlight .amount { color: var(--red); }
-    .phase-features { display: flex; flex-direction: column; gap: 0.65rem; margin: 1.5rem 0 2rem; }
+    .phase-features { display: flex; flex-direction: column; gap: 0.65rem; margin: 1.5rem 0 2rem; flex: 1; }
     .phase-features li { display: flex; align-items: flex-start; gap: 10px; font-size: 0.9rem; color: var(--white-dim); line-height: 1.5; }
     .phase-features li::before { content: '▸'; color: var(--red); flex-shrink: 0; margin-top: 1px; font-size: 0.7rem; }
     .phase-free-month { display: inline-flex; align-items: center; gap: 8px; font-family: var(--font-condensed); font-size: 0.78rem; font-weight: 700; letter-spacing: 0.12em; text-transform: uppercase; color: var(--red); margin-bottom: 1.5rem; padding: 8px 14px; background: rgba(249,30,15,0.08); border: 1px solid rgba(249,30,15,0.2); }
@@ -48,7 +48,7 @@
     .subs-section { padding-top: 100px; }
     #coaching, #subscriptions, #otp { scroll-margin-top: calc(var(--nav-h) + 57px); }
     .subs-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 2px; margin-top: 3rem; background: var(--grey-line); }
-    .sub-card { background: var(--black-card); padding: 2.5rem; position: relative; overflow: hidden; transition: background var(--transition); }
+    .sub-card { background: var(--black-card); padding: 2.5rem; position: relative; overflow: hidden; transition: background var(--transition); display: flex; flex-direction: column; }
     .sub-card:hover { background: var(--black-card2); }
     .sub-card::before { content: ''; position: absolute; top: 0; left: 0; width: 3px; height: 100%; background: var(--red); transform: scaleY(0); transform-origin: top; transition: transform 0.4s ease; }
     .sub-card:hover::before { transform: scaleY(1); }
@@ -56,16 +56,16 @@
     .sub-card h3 { font-family: var(--font-display); font-size: 1.5rem; color: var(--white); margin-bottom: 0.5rem; line-height: 1.1; }
     .sub-price { font-family: var(--font-display); font-size: 2.2rem; color: var(--white); margin: 1rem 0; line-height: 1; }
     .sub-price small { font-family: var(--font-body); font-size: 0.85rem; color: var(--white-mute); font-weight: 400; }
-    .sub-features { display: flex; flex-direction: column; gap: 0.6rem; margin: 1.2rem 0 1.8rem; }
+    .sub-features { display: flex; flex-direction: column; gap: 0.6rem; margin: 1.2rem 0 1.8rem; flex: 1; }
     .sub-features li { display: flex; align-items: flex-start; gap: 8px; font-size: 0.88rem; color: var(--white-dim); line-height: 1.5; }
     .sub-features li::before { content: '—'; color: var(--red); flex-shrink: 0; }
     .otp-section { padding-top: 80px; }
     .otp-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 2px; margin-top: 3rem; background: var(--grey-line); }
-    .otp-card { background: var(--black-card); padding: 2.2rem; transition: background var(--transition); }
+    .otp-card { background: var(--black-card); padding: 2.2rem; transition: background var(--transition); display: flex; flex-direction: column; }
     .otp-card:hover { background: var(--black-card2); }
     .otp-card h4 { font-family: var(--font-condensed); font-size: 1rem; font-weight: 700; letter-spacing: 0.05em; text-transform: uppercase; color: var(--white); margin-bottom: 0.5rem; }
     .otp-card .otp-price { font-family: var(--font-display); font-size: 1.8rem; color: var(--red); margin-bottom: 1rem; line-height: 1; }
-    .otp-card p { font-size: 0.87rem; color: var(--white-dim); line-height: 1.7; margin-bottom: 1.5rem; }
+    .otp-card p { font-size: 0.87rem; color: var(--white-dim); line-height: 1.7; margin-bottom: 1.5rem; flex: 1; }
     @media (max-width: 1024px) { .coaching-intro-grid { grid-template-columns: 1fr; } .coaching-img { height: 300px; } }
     @media (max-width: 768px) { .phases-grid { grid-template-columns: 1fr; } .subs-grid { grid-template-columns: 1fr; } .otp-grid { grid-template-columns: 1fr 1fr; } .page-tabs-inner { overflow-x: auto; } }
     @media (max-width: 540px) { .otp-grid { grid-template-columns: 1fr; } }
@@ -143,7 +143,7 @@
   <section style="background:var(--black-mid);border-top:1px solid var(--grey-line);">
     <div class="container">
       <p class="section-label reveal">Coaching Phases</p>
-      <h2 class="section-title reveal" data-delay="80">Premium In Person<br>2 on 1 Coaching</h2>
+      <h2 class="section-title reveal" data-delay="80">Premium<br>2 on 1 Coaching</h2>
       <p class="section-sub reveal" data-delay="160">Three structured phases. One complete transformation. Complete all three and receive 10% off.</p>
       <div class="phases-grid" style="margin-top:3.5rem;">
 
@@ -223,7 +223,7 @@
             <li>Free subscription / product access</li>
             <li>3 months free after completion</li>
           </ul>
-          <a href="contact.html" class="btn btn-primary">Buy Now</a>
+          <a href="contact.html" class="btn btn-primary">Get Started</a>
         </div>
 
       </div>
@@ -296,12 +296,12 @@
       <h2 class="section-title reveal" data-delay="80">MNM Products</h2>
       <p class="section-sub reveal" data-delay="160">Standalone guides and tools to accelerate your progress, available as a single purchase.</p>
       <div class="otp-grid">
-        <div class="otp-card reveal" data-delay="0"><h4>MNM Pre/Post Workout Meals</h4><div class="otp-price">$5.99</div><p>Performance-driven meal options for training support and recovery. Optimizes energy levels and muscle repair with simple, consistent preparation.</p><a href="https://buy.stripe.com/8x2eVf9dJdgh44D8dP7g406" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Buy Now</a></div>
-        <div class="otp-card reveal" data-delay="80"><h4>Simple/Complex Carbs + Best Protein Sources</h4><div class="otp-price">$5.99</div><p>Clear breakdown of carbohydrate types, high-quality protein sources, and practical portion guidance for different goals.</p><a href="https://buy.stripe.com/aFadRb75B6RTat1fGh7g407" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Buy Now</a></div>
-        <div class="otp-card reveal" data-delay="160"><h4>MNM 7 Day Detox &amp; Dopamine Reset</h4><div class="otp-price">$4.99</div><p>A structured reset to improve focus, discipline, and self-control. Eliminates excessive digital stimulation and poor nutritional habits. Includes 7-day juice detox body cleanse.</p><a href="https://buy.stripe.com/4gM7sNdtZa457gP79L7g408" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Buy Now</a></div>
-        <div class="otp-card reveal" data-delay="0"><h4>Fat Loss For Busy Men Blueprint</h4><div class="otp-price">$6.99</div><p>Efficient fat-loss strategies for demanding schedules. Minimal yet effective training structure. Built for long-term adherence rather than extremes.</p><a href="https://buy.stripe.com/5kQaEZ2PlgstcB9bq17g409" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Buy Now</a></div>
-        <div class="otp-card reveal" data-delay="80"><h4>MNM Home Training Vault</h4><div class="otp-price">$4.99</div><p>Structured training programs requiring minimal equipment. Progressive programming for fat loss and muscle development without gym access.</p><a href="https://buy.stripe.com/3cIeVfey3b897gP0Ln7g40a" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Buy Now</a></div>
-        <div class="otp-card reveal" data-delay="160"><h4>MNM Accountability Tracker</h4><div class="otp-price">$5.99</div><p>Weekly tracking system for training, nutrition, and habits. Simple format designed for long-term use. Builds awareness around behaviors and execution.</p><a href="https://buy.stripe.com/8x26oJblR5NPgRpdy97g40c" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Buy Now</a></div>
+        <div class="otp-card reveal" data-delay="0"><h4>MNM Pre/Post Workout Meals</h4><div class="otp-price">$5.99</div><p>Performance-driven meal options for training support and recovery. Optimizes energy levels and muscle repair with simple, consistent preparation.</p><a href="https://buy.stripe.com/8x2eVf9dJdgh44D8dP7g406" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Get Started</a></div>
+        <div class="otp-card reveal" data-delay="80"><h4>Simple/Complex Carbs + Best Protein Sources</h4><div class="otp-price">$5.99</div><p>Clear breakdown of carbohydrate types, high-quality protein sources, and practical portion guidance for different goals.</p><a href="https://buy.stripe.com/aFadRb75B6RTat1fGh7g407" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Get Started</a></div>
+        <div class="otp-card reveal" data-delay="160"><h4>MNM 7 Day Detox &amp; Dopamine Reset</h4><div class="otp-price">$4.99</div><p>A structured reset to improve focus, discipline, and self-control. Eliminates excessive digital stimulation and poor nutritional habits. Includes 7-day juice detox body cleanse.</p><a href="https://buy.stripe.com/4gM7sNdtZa457gP79L7g408" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Get Started</a></div>
+        <div class="otp-card reveal" data-delay="0"><h4>Fat Loss For Busy Men Blueprint</h4><div class="otp-price">$6.99</div><p>Efficient fat-loss strategies for demanding schedules. Minimal yet effective training structure. Built for long-term adherence rather than extremes.</p><a href="https://buy.stripe.com/5kQaEZ2PlgstcB9bq17g409" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Get Started</a></div>
+        <div class="otp-card reveal" data-delay="80"><h4>MNM Home Training Vault</h4><div class="otp-price">$4.99</div><p>Structured training programs requiring minimal equipment. Progressive programming for fat loss and muscle development without gym access.</p><a href="https://buy.stripe.com/3cIeVfey3b897gP0Ln7g40a" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Get Started</a></div>
+        <div class="otp-card reveal" data-delay="160"><h4>MNM Accountability Tracker</h4><div class="otp-price">$5.99</div><p>Weekly tracking system for training, nutrition, and habits. Simple format designed for long-term use. Builds awareness around behaviors and execution.</p><a href="https://buy.stripe.com/8x26oJblR5NPgRpdy97g40c" target="_blank" rel="noopener" class="btn btn-ghost" style="font-size:0.82rem;padding:10px 22px;">Get Started</a></div>
       </div>
     </div>
   </section>
